// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can paste a valid url and add it to topic 1`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-4 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115, 115, 115, 0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-6 {
  background: linear-gradient(180deg, #5d97a9, #508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-8 {
  height: 50px;
  width: 50px;
}

.emotion-10 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-10:hover,
.emotion-10:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:disabled,
.emotion-10:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-10:focus {
  outline-width: medium;
}

.emotion-12 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-14 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-16 {
  width: 100%;
}

.emotion-16>* {
  width: 100%;
}

.emotion-16 form {
  background-color: white;
}

.emotion-18 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18:first-of-type {
  margin-top: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-20:focus-within {
  border-color: #20588f;
}

.emotion-20 input,
.emotion-20 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-20 input:focus,
.emotion-20 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-20 input {
  padding: 6.5px 13px;
}

.emotion-20 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-20 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-22 {
  padding: 13px;
  border: 1px solid #ddd;
  background-color: white;
  width: 100%;
  height: 150px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  text-align: center;
  margin-right: 13px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  max-width: 180px;
}

.emotion-24 img {
  max-height: 100%;
}

.emotion-24 svg {
  margin: 32.5px;
  width: 60px;
  height: 60px;
}

.emotion-26 {
  -webkit-flex: 2 4 auto;
  -ms-flex: 2 4 auto;
  flex: 2 4 auto;
  overflow: hidden;
}

.emotion-28 {
  margin: 0;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.8;
  color: #444;
}

.emotion-30 {
  font-size: 0.8rem;
  margin: 0;
}

.emotion-32 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
  overflow-x: auto;
}

@media (max-width: 48em) {
  .emotion-32 {
    top: 64px;
    overflow-y: auto;
    white-space: normal;
    z-index: 26;
  }
}

@media (max-width: 29.75em) {
  .emotion-32 {
    top: 43px;
  }
}

.emotion-34 {
  overflow-x: auto;
  background-color: white;
  margin: 52px auto 52px;
  padding: 1em 2em 3em;
  max-width: 400px;
  border-radius: 5px;
  border-radius: 0;
  min-height: 210px;
  max-width: 620px;
  padding-bottom: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-36 {
  float: right;
  height: 44px;
  width: 44px;
  margin-top: -5px;
  margin-right: -20px;
}

.emotion-40 {
  float: right;
  height: 24px;
  width: 24px;
  margin-right: 7px;
  color: #777777;
  background-color: #d1372e;
  color: white;
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.emotion-44 {
  height: 100%;
  padding-top: 26px;
  font-size: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-48 {
  width: 27px;
  height: 27px;
  margin-right: 13px;
}

.emotion-50 {
  width: 100%;
  display: inline-block;
  text-align: left;
}

.emotion-52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

.emotion-54,
.emotion-54:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

<div
  class="emotion-0 emotion-1"
>
  <div
    aria-hidden="true"
    class="emotion-2 emotion-3"
  />
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-6 emotion-7"
    >
      Søk etter ressurs
      <button
        class="emotion-8 emotion-9 emotion-10 emotion-11"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-icon emotion-12 emotion-13"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-16 emotion-17"
      >
        <div>
          <div
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-20 emotion-21"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value="https://beta.ndla.no/subject:3/topic:1:179373/topic:1:170165/resource:1:168388/"
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
          data-testid="articlePreview"
        >
          <div
            class="emotion-24 emotion-25"
          >
            <img
              alt=""
              src="/placeholder.png"
            />
          </div>
          <div
            class="emotion-26 emotion-27"
          >
            <h1
              class="emotion-28 emotion-29"
            >
              Hva kan du om geologiske prosesser?
            </h1>
            <p
              class="emotion-30 emotion-31"
            />
          </div>
        </div>
        <div
          class="emotion-32 emotion-33"
        >
          <div
            class="emotion-34 emotion-35"
          >
            <button
              class="emotion-36 emotion-37 emotion-10 emotion-11"
              data-testid="closeAlert"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon emotion-40 emotion-41"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                severity="danger"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
            <div
              class="emotion-42 emotion-43"
            >
              <div
                class="emotion-44 emotion-45"
              >
                <div
                  class="emotion-46 emotion-47"
                >
                  <svg
                    aria-hidden="true"
                    class="c-icon emotion-48 emotion-49"
                    data-license="Apache License 2.0"
                    data-source="Material Design"
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g>
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </g>
                  </svg>
                  <span
                    class="emotion-50 emotion-51"
                  >
                    Obs! Denne ressursen er en annen type urn:resourcetype:tasksAndActivities
                  </span>
                </div>
                <div
                  class="emotion-52 emotion-53"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-54 emotion-55 emotion-10 emotion-11"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 1`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-4 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115, 115, 115, 0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-6 {
  background: linear-gradient(180deg, #5d97a9, #508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-8 {
  height: 50px;
  width: 50px;
}

.emotion-10 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-10:hover,
.emotion-10:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:disabled,
.emotion-10:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-10:focus {
  outline-width: medium;
}

.emotion-12 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-14 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-16 {
  width: 100%;
}

.emotion-16>* {
  width: 100%;
}

.emotion-16 form {
  background-color: white;
}

.emotion-18 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18:first-of-type {
  margin-top: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-20:focus-within {
  border-color: #20588f;
}

.emotion-20 input,
.emotion-20 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-20 input:focus,
.emotion-20 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-20 input {
  padding: 6.5px 13px;
}

.emotion-20 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-20 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin: 20px 0;
}

.emotion-28 {
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  background: #fff;
  border-radius: 4px;
  box-shadow: 0 0 19px rgba(0, 0, 0, 0.2);
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  width: 100%;
}

.emotion-30 {
  overflow-y: scroll;
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-name: fadeInLeft;
  animation-name: fadeInLeft;
  border-top: 1px solid #f8f8f8;
  max-height: 500px;
}

.emotion-32 {
  border: 0;
  border-bottom: 1px solid #f8f8f8;
  padding: 13px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  background: transparent;
}

.emotion-32:focus,
.emotion-32:hover {
  background: #deebf6;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 13px;
  -webkit-box-flex: 3;
  -webkit-flex-grow: 3;
  -ms-flex-positive: 3;
  flex-grow: 3;
}

.emotion-36 {
  font-size: 18;
  font-size: 1rem;
  line-height: 1.1;
  font-weight: 600;
  color: #444;
  text-align: left;
}

.emotion-92 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: 1em;
}

.emotion-94 {
  display: inline;
  background: transparent;
  border: 0;
  border-top: 3px solid #e6e6e6;
  padding: 1em 1.45em;
  margin: 1em 0.3em 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  color: #20588f;
  cursor: pointer;
  border-top: 3px solid #20588f;
  background-color: 'rgba(222,235,246,0.5)';
}

.emotion-94:hover {
  border-top: 3px solid #20588f;
  background-color: 'rgba(222,235,246,0.5)';
}

.emotion-95 {
  display: inline;
  background: transparent;
  border: 0;
  border-top: 3px solid #e6e6e6;
  padding: 1em 1.45em;
  margin: 1em 0.3em 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  color: #20588f;
  cursor: pointer;
}

.emotion-95:hover {
  border-top: 3px solid #20588f;
  background-color: 'rgba(222,235,246,0.5)';
}

.emotion-100 {
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
  color: #757575;
  padding: 13px;
  border-top: 1px solid #f8f8f8;
}

.emotion-102,
.emotion-102:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

<div
  class="emotion-0 emotion-1"
>
  <div
    aria-hidden="true"
    class="emotion-2 emotion-3"
  />
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-6 emotion-7"
    >
      Søk etter ressurs
      <button
        class="emotion-8 emotion-9 emotion-10 emotion-11"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-icon emotion-12 emotion-13"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-16 emotion-17"
      >
        <div>
          <div
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-20 emotion-21"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          Eller
        </div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns="downshift-0-menu"
          role="combobox"
        >
          <div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-0-menu"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="downshift-0-label"
            class="emotion-28 emotion-29"
            data-testid="dropdown-items"
            id="downshift-0-menu"
            role="listbox"
          >
            <div
              class="emotion-30 emotion-31"
            >
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-0"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om geologiske prosesser?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-1"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om petroleumsgeologi?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-2"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om olje og gass på den norske sokkelen?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-3"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om letemetoder og datainnsamling?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-4"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om installasjoner for boring og vedlikehold?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-5"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om installasjoner for produksjon?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-6"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Sammendrag om rørhåndtering
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-7"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om slamsystemet?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-8"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om sementeringsutstyret?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-32 emotion-33"
                id="downshift-0-item-9"
                role="option"
                type="button"
              >
                <div
                  class="emotion-34 emotion-35"
                >
                  <span
                    class="emotion-36 emotion-37"
                  >
                    Hva kan du om stigerørsystemet?
                  </span>
                  
                </div>
              </button>
            </div>
            <div
              class="emotion-92 emotion-93"
              data-testid="pager"
            >
              <span
                aria-current="step"
                class="emotion-94"
              >
                1
              </span>
              <button
                class="emotion-95"
              >
                2
              </button>
              <button
                class="emotion-95"
              >
                3
              </button>
              <button
                class="emotion-95"
              >
                4
              </button>
              <button
                class="emotion-95"
              >
                5
              </button>
              <button
                class="emotion-95"
              >
                &gt;
              </button>
            </div>
            <div
              class="emotion-100 emotion-101"
            >
              Søket gav 180 treff
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-102 emotion-103 emotion-10 emotion-11"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 2`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-4 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115, 115, 115, 0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-6 {
  background: linear-gradient(180deg, #5d97a9, #508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-8 {
  height: 50px;
  width: 50px;
}

.emotion-10 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-10:hover,
.emotion-10:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:disabled,
.emotion-10:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-10:focus {
  outline-width: medium;
}

.emotion-12 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-14 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-16 {
  width: 100%;
}

.emotion-16>* {
  width: 100%;
}

.emotion-16 form {
  background-color: white;
}

.emotion-18 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18:first-of-type {
  margin-top: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-20:focus-within {
  border-color: #20588f;
}

.emotion-20 input,
.emotion-20 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-20 input:focus,
.emotion-20 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-20 input {
  padding: 6.5px 13px;
}

.emotion-20 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-20 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin: 20px 0;
}

.emotion-28 {
  padding: 13px;
  border: 1px solid #ddd;
  background-color: white;
  width: 100%;
  height: 150px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-30 {
  text-align: center;
  margin-right: 13px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  max-width: 180px;
}

.emotion-30 img {
  max-height: 100%;
}

.emotion-30 svg {
  margin: 32.5px;
  width: 60px;
  height: 60px;
}

.emotion-32 {
  -webkit-flex: 2 4 auto;
  -ms-flex: 2 4 auto;
  flex: 2 4 auto;
  overflow: hidden;
}

.emotion-34 {
  margin: 0;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.8;
  color: #444;
}

.emotion-36 {
  font-size: 0.8rem;
  margin: 0;
}

.emotion-38,
.emotion-38:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

<div
  class="emotion-0 emotion-1"
>
  <div
    aria-hidden="true"
    class="emotion-2 emotion-3"
  />
  <div
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-6 emotion-7"
    >
      Søk etter ressurs
      <button
        class="emotion-8 emotion-9 emotion-10 emotion-11"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-icon emotion-12 emotion-13"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <div
        class="emotion-16 emotion-17"
      >
        <div>
          <div
            class="emotion-18 emotion-19"
          >
            <div
              class="emotion-20 emotion-21"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          Eller
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
        >
          <div>
            <div
              class="emotion-18 emotion-19"
            >
              <div
                class="emotion-20 emotion-21"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value="Hva kan du om geologiske prosesser?"
                />
                <svg
                  aria-hidden="true"
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-28 emotion-29"
          data-testid="articlePreview"
        >
          <div
            class="emotion-30 emotion-31"
          >
            <img
              alt=""
              src="/placeholder.png"
            />
          </div>
          <div
            class="emotion-32 emotion-33"
          >
            <h1
              class="emotion-34 emotion-35"
            >
              Hva kan du om geologiske prosesser?
            </h1>
            <p
              class="emotion-36 emotion-37"
            />
          </div>
        </div>
      </div>
      <button
        class="emotion-38 emotion-39 emotion-10 emotion-11"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;
